feat: 🎸 mcp improvments
